--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="grid place-items-center p-8">
-    <h1 class="text-xl font-bold text-emerald-700">Tailwind Template E2022</h1>
-    <p class="text-emerald-500">
-      Powered by <a href="https://vitejs.dev/guide">Vite</a>
-    </p>
-    <img src="img/vite.svg" alt="Vite Logo" />
+  <body >
+<header></header>
+<main>
+  <section>
+    <h1 class="text-center">FÅ MERE UD AF DINE FILM- <br>
+      BILLEDER MED CPH-LAB
+    </h1>
+    <img class="w-screen" src="/img/splashbillede-mobil.png" alt="Billedeprinter">
+    <div class="justify-center">
+       <button class=""><link rel="stylesheet" href="">BESTIL DIN FREMKALDELSE</button>
+    </div>
+    
+   
+  </section>
+  <section>
+    <div>
+        <h2>VORES SERVICES</h2>
+        <img src="" alt="">
+        <p>CPH-LAB er skabt og drives af et passioneret team filmnørder - vi har skræddersyet en service, der gør det nemt for alle, at få fremkaldt sine analogfilm, uanset hvor man bor i landet. </p>
+    </div>
+  <h3>Vi tilbyder</h3>
+  <ul>
+    <li><h4>Fremkalelse af analogfilm</h4></li>
+    <li><h4>Scan af lys- og papirbilleder</h4></li>
+    <li><h4>Overspilning af smalfilm og videobånd</h4></li>
+  </ul>
+  </section>
+  <section>
+    <h2>DE PROFESSIONELLES VALG TIL DE LAVESTE PRISER</h2>
+
+  </section>
+  <section>
+    <h2>@CPH.LAB</h2>
+    <p>Tag os med @cph.lab på instagram på dit filmbillede for at blive featured på vores instagram og vær med i lodtrækningen om 1x gratis fremkaldelse + Digitale billeder !</p>
+  </section>
+</main>
+<footer>
 
     <script type="module" src="./main.js"></script>
   </body>
