--- a/src/fremkaldelse.html
+++ b/src/fremkaldelse.html
@@ -10,15 +10,7 @@
 </head>
 
 <body class="prose">
-    <h1>Bestil din fremkaldelse </h1>
-    <h3>Her bestiller du hvordan dine film og engsngkameraer skal fremkaldes</h3>
 
-<nav>
-<button>Fremkaldelse og scan</button>
-<button>Kun fremkaldelse</button>
-<button>Kun Scan</button>
-<button>Specielle film</button>
-</nav>
 
 
 <section>
@@ -35,22 +27,72 @@
 </section>
 
 <section>
-    <h2>FREMKALDELSEAF FILM + SCAN</h2>
+    <h2>FREMKALDELSE AF FILM + SCAN</h2>
     <h3>Send os din film, og du får dine digitale billeder retur på mail eller printet med posten.</h3>
-</section>
 
-<ul>
-    <li><a href="">
+    <ul id="carousel">
+        <li><a href="">
         <img src="/img/fremkaldelse.png" alt="">
         <h3>Fremkaldelse</h3>
+        <h5>119,-</h5>
     </a>
     </li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
-    <li>6</li>
+
+
+    <li><a href="">
+        <img src="/img/fremkaldelse.png" alt="">
+        <h3>5 x Fremkaldelse</h3>
+        <h5>545,-</h5>
+    </a>
+    </li>
+    
+    <li><a href="">
+        <img src="/img/120fremkaldelse.png" alt="">
+        <h3>120 Fremkaldelse</h3>
+        <h5>199,-</h5>
+    </a>
+    </li>
+
+    <li><a href="">
+        <img src="/img/5x120fremkaldelse.png" alt="">
+        <h3>5 x 120 Fremkaldelse</h3>
+        <h5>945,-</h5>
+    </a>
+    </li>
+  
   </ul>
+</section>
+
+
+<section>
+    <h2>Fremkaldelse af film</h2>
+    <h3>Vi fremkalder din film, og du har selv scanner.</h3>
+
+    <ul id="carousel">
+    <li><a href="">
+        <img src="/img/fremkaldelse.png" alt="">
+        <h3>35mm Fremkaldelse</h3>
+        <h5>69,-</h5>
+    </a>
+    </li>
+    
+    <li><a href="">
+        <img src="/img/35mmfremkaldelse10ruller.png" alt="">
+        <h3>35mm Fremkaldelse 10 ruller</h3>
+        <h5>619,-</h5>
+    </a>
+    </li>
+
+    <li><a href="">
+        <img src="/img/120fremkaldelsemlformat.png" alt="">
+        <h3>120 fremkaldelse (ml. format)</h3>
+        <h5>79,-</h5>
+    </a>
+    </li>
+    </ul>
+
+
+</section>
 
 
 <script type="module" src="./main.js"></script>
