--- a/src/singleview.html
+++ b/src/singleview.html
@@ -7,14 +7,100 @@
     <link rel="stylesheet" href="style.css" />
     <title>Vite App</title>
   </head>
-  <body class="grid place-items-center p-8">
+  <body class="mx-8 grid">
     <section id="section1">
-      <h1 class="text-xl font-bold">CPH-LAB'S ANALOG-GUIDE</h1>
-      <p>Her kan du blive klogere på film & se billede-eksempler.</p>
+      <h1 class="text-center text-xl font-bold">FREMKALDELSE</h1>
+      <div class="grid place-items-center">
+        <img src="/img/fremkaldelse.png" alt="Analogfilm" />
+        <form class="flex flex-col">
+          <label class="mt-4" for="print">Print</label>
+          <select name="print" id="print">
+            <option value="blankt">10x15 (blankt papir) +99</option>
+            <option value="mat">10x15 (mat papir) +99</option>
+            <option value="hvid_blankt">
+              10x15 hvid kant (blankt papir) +99
+            </option>
+            <option value="hvid_mat">10x15 hvid kant (mat papir) +99</option>
+            <option value="ingen_print">Ingen print</option>
+          </select>
+
+          <label class="mt-4" for="scan">Scan kvalitet</label>
+          <select name="scan" id="scan">
+            <option value="l">Large</option>
+            <option value="xl">X-Large +29</option>
+            <option value="xxl">XX-Large +99</option>
+          </select>
+
+          <label class="mt-4" for="specialfilm">Specialfilm</label>
+          <select name="specialfilm" id="specialfilm">
+            <option value="alm_film">Almindelig film</option>
+            <option value="dias_sh">Dias eller sort/hvid +49</option>
+          </select>
+
+          <label class="mt-4" for="antal">Antal</label>
+          <select name="antal" id="antal" class="w-1/5">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+          <div class="relative mt-8">
+            <p class="absolute right-0 bottom-0">fra kr119</p>
+          </div>
+
+          <button class="p-4">Tilføj til kurv</button>
+        </form>
+      </div>
     </section>
 
     <section>
-      <h2 class="text-center font-bold">UDVALGTE FILM</h2>
+      <h2 class="font-bold">Yderligere information</h2>
+      <p>
+        Send din film/engangskamera med posten til vores fremkalderstudie, og vi
+        sørger for at fremkalde samt scanne den digitalt i flot opløsning! Når
+        vi har færdigbehandlet dine billeder, sender vi dem til dig direkte over
+        mail. Læs mere om denne vare og hvordan du gør under sektionen: "Send
+        din film"
+      </p>
+      <p>Filformat: JPG</p>
+      <p>
+        OBS.: Der korrigeres ikke for støv og ridser på scan af sort/hvid-film.
+      </p>
+    </section>
+
+    <section>
+      <h2>Leveringstid</h2>
+      <p>
+        Almindelig C41 farvefilm: Op til 5 hverdage fra modtagelse (uden
+        modtagelsesdagen) Specialfilm: Op til 12 hverdage fra modtagelse (uden
+        modtagelsesdagen)
+      </p>
+    </section>
+
+    <section>
+      <h2>Scan kvaliteter:</h2>
+      <ul>
+        <li>
+          Large: 2692 × 1830 - Scan i høj opløsning. Kan printes i A4 størrelse.
+        </li>
+        <li>
+          X-Large: 3637 × 2433 - Til enteusiasterne. Kan printes i A3 størrelse.
+        </li>
+        <li>
+          XX-Large: 3649 × 5362 - Til de professionelle. Kan printes i
+          plakatstørrelse.
+        </li>
+      </ul>
+      <p>
+        Printstørrelserne foroven er vejledende. Dette afhænger også af filmens
+        skarphed og omstændighederne, som billedet blev taget under.
+      </p>
     </section>
 
     <script type="module" src="./main.js"></script>
