--- a/src/singleview.html
+++ b/src/singleview.html
@@ -11,7 +11,9 @@
     <section id="section1">
       <h1 class="text-center text-xl font-bold">FREMKALDELSE</h1>
       <div class="grid place-items-center">
-        <img src="/img/fremkaldelse.png" alt="Analogfilm" />
+        <div class="bg-neutral-200 p-4 pb-16">
+          <img src="/img/fremkaldelse.png" alt="Analogfilm" />
+        </div>
         <form class="flex flex-col">
           <label class="mt-4" for="print">Print</label>
           <select name="print" id="print">
@@ -87,14 +89,22 @@
       <h2>Scan kvaliteter:</h2>
       <ul>
         <li>
-          Large: 2692 × 1830 - Scan i høj opløsning. Kan printes i A4 størrelse.
+          <span
+            >Large: 2692 × 1830 - Scan i høj opløsning. Kan printes i A4
+            størrelse.
+          </span>
         </li>
         <li>
-          X-Large: 3637 × 2433 - Til enteusiasterne. Kan printes i A3 størrelse.
+          <span
+            >X-Large: 3637 × 2433 - Til enteusiasterne. Kan printes i A3
+            størrelse.
+          </span>
         </li>
         <li>
-          XX-Large: 3649 × 5362 - Til de professionelle. Kan printes i
-          plakatstørrelse.
+          <span
+            >XX-Large: 3649 × 5362 - Til de professionelle. Kan printes i
+            plakatstørrelse.</span
+          >
         </li>
       </ul>
       <p>
