--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,38 @@
     <title>Cph-Lab</title>
   </head>
   <body class="">
-<header></header>
+<header class="flex">
+  <img src="/img/Logo.png" alt="Logo">
+  <nav>
+    <ul>
+      <div class="dropdown">
+        <button class="dropbtn"> SHOP
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdowncontent">
+          <ul>
+            <a href="fremkaldelse.html">BESTIL FREMKALDELSE</a>
+            <a href="#0">KØB FILM & GAVEKORT</a>
+            <a href="#0">VIDEO OVERSPILNING</a>
+            <a href="smalfilm-overspillet.html">SMALFILM OVERSPILNING</a>
+            <a href="#0">SCAN AF LYSBILLEDER</a>
+            <a href="#0">SCAN AF PAPIRBILLEDER</a>
+          </ul>
+        </div>
+      </div>
+      <a href="">ANALOG-GUIDE</a>
+      <a href="">SÅDAN GØR DU</a>
+      <a href="">OM OS</a>
+      <a href="">FAQ</a>
+    </ul>
+  </nav>
+</header>
 <main>
   <section>
     <h1 class="text-center">FÅ MERE UD AF DINE FILM- <br>
       BILLEDER MED CPH-LAB
     </h1>
-    <img class="w-screen md:hidden" src="/img/splashbillede-mobil.png" alt="Billedeprinter">
+    <img class="w-screen md:hidden " src="/img/splashbillede-mobil.png" alt="Billedeprinter">
     <img class="hidden  md:block " src="/img/splashbillede.png" alt="splashbillede">
     <div class="grid grid-cols-3">
       <button class="col-span-3 mt-6">BESTIL DIN FREMKALDELSE</button>
