--- a/src/fremkaldelse.html
+++ b/src/fremkaldelse.html
@@ -95,6 +95,88 @@
 </section>
 
 
+
+
+<section>
+    <h2>Scan separat</h2>
+    <h3>Din film er allerede fremkaldt. Vi scanner og sender dine billeder på mail..</h3>
+
+    <ul id="carousel">
+    <li><a href="">
+        <img src="/img/scan+printafnegativer.png" alt="">
+        <h3>Scan + print af negativer</h3>
+        <h5>119,-</h5>
+    </a>
+    </li>
+    
+    <li><a href="">
+        <img src="/img/scantildigitalebilleder.png" alt="">
+        <h3>Scan til digtitale billeder</h3>
+        <h5>89,-</h5>
+    </a>
+    </li>
+
+    <li><a href="">
+        <img src="/img/120fremkaldelsemlformat.png" alt="">
+        <h3>120 film scan</h3>
+        <h5>179,-</h5>
+    </a>
+    </li>
+    </ul>
+</section>
+
+<section>
+    <h2>Specielle film</h2>
+
+
+    <ul id="carousel">
+        <li><a href="">
+            <img src="/img/speciellefilm.png" alt="">
+            <h3>110 Fremkaldelse + Scan</h3>
+            <h5>349,-</h5>
+        </a>
+        </li>
+
+        <li><a href="">
+            <img src="/img/speciellefilm.png" alt="">
+            <h3>126 Fremkaldelse + Digitale billeder</h3>
+            <h5>349,-</h5>
+        </a>
+        </li>
+
+        <li><a href="">
+            <img src="/img/speciellefilm.png" alt="">
+            <h3>4x5 Storformat fremkaldelse</h3>
+            <h5>149,-</h5>
+        </a>
+        </li>
+
+        <li><a href="">
+            <img src="/img/speciellefilm.png" alt="">
+            <h3>APS Fremkaldelse + Scan</h3>
+            <h5>249,-</h5>
+        </a>
+        </li>
+
+        <li><a href="">
+            <img src="/img/speciellefilm.png" alt="">
+            <h3>APS Fremkaldelse + print</h3>
+            <h5>299,-</h5>
+        </a>
+        </li>
+
+        <li><a href="">
+            <img src="/img/speciellefilm.png" alt="">
+            <h3>APS Scan</h3>
+            <h5>199,-</h5>
+        </a>
+        </li>
+
+        </ul>
+        
+</section>
+
+
 <script type="module" src="./main.js"></script>
 
 
