--- a/src/index.html
+++ b/src/index.html
@@ -8,30 +8,27 @@
     <title>Cph-Lab</title>
   </head>
   <body class="">
-<header class="flex">
-  <img src="/img/Logo.png" alt="Logo">
-  <nav>
-    <ul>
+<header class="flex justify-between ">
+  <img src="/img/logo.svg" alt="Logo">
+  <nav class="navbar">
       <div class="dropdown">
         <button class="dropbtn"> SHOP
           <i class="fa fa-caret-down"></i>
         </button>
-        <div class="dropdowncontent">
-          <ul>
+        <div class="dropdown-content">
             <a href="fremkaldelse.html">BESTIL FREMKALDELSE</a>
             <a href="#0">KØB FILM & GAVEKORT</a>
             <a href="#0">VIDEO OVERSPILNING</a>
             <a href="smalfilm-overspillet.html">SMALFILM OVERSPILNING</a>
             <a href="#0">SCAN AF LYSBILLEDER</a>
             <a href="#0">SCAN AF PAPIRBILLEDER</a>
-          </ul>
         </div>
       </div>
       <a href="">ANALOG-GUIDE</a>
       <a href="">SÅDAN GØR DU</a>
       <a href="">OM OS</a>
       <a href="">FAQ</a>
-    </ul>
+      <a href=""><img src="/img/Bag.svg" alt="Kurv"></a>
   </nav>
 </header>
 <main>
