--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
       BILLEDER MED CPH-LAB
     </h1>
     <img class="w-screen md:hidden " src="/img/splashbillede-mobil.png" alt="Billedeprinter">
-    <img class="hidden  md:block " src="/img/splashbillede.png" alt="splashbillede">
+    <img class="hidden  md:block " src="/img/splashbillede.png" alt="splashbillede"> <br>
     <div class="grid grid-cols-3">
-      <button class="col-span-3 mt-6">BESTIL DIN FREMKALDELSE</button>
+      <button class= "ctaknap col-span-3 mt-6">BESTIL DIN FREMKALDELSE</button> <br>
       </div>
    
   </section>
