--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       <button class= "ctaknap col-span-3 mt-6">BESTIL DIN FREMKALDELSE</button> <br>
 
     <header class="banner flex justify-between">
-      <img src="/img/logo.svg" alt="Logo" />
+      <img class="mt-5" src="/img/logo.svg" alt="Logo" />
       <div>
         <button class="toggle-btn">☰</button>
         <nav class="navbar">
