--- a/src/singleview.html
+++ b/src/singleview.html
@@ -7,16 +7,21 @@
     <link rel="stylesheet" href="style.css" />
     <title>Vite App</title>
   </head>
-  <body class="mx-8 grid">
+  <body
+    class="mx-8 grid bg-[url('/img/retro_swirl.svg')] bg-auto bg-no-repeat md:bg-none md:bg-[url('/img/retro_swirl_web.svg')]"
+  >
     <section id="section1">
-      <h1 class="text-center text-xl font-bold">FREMKALDELSE</h1>
-      <div class="grid place-items-center">
-        <div class="bg-neutral-200 p-4 pb-16">
-          <img src="/img/fremkaldelse.png" alt="Analogfilm" />
-        </div>
+      <h1 class="my-5 text-center text-xl font-bold">FREMKALDELSE</h1>
+      <div class="mx-10 grid md:mx-40 md:grid md:grid-cols-2 md:gap-8">
+        <img
+          src="/img/single-film.svg"
+          alt="Analogfilm"
+          class="place-content-center rounded-sm drop-shadow-md"
+        />
+
         <form class="flex flex-col">
           <label class="mt-4" for="print">Print</label>
-          <select name="print" id="print">
+          <select class="rounded-lg" name="print" id="print">
             <option value="blankt">10x15 (blankt papir) +99</option>
             <option value="mat">10x15 (mat papir) +99</option>
             <option value="hvid_blankt">
@@ -27,20 +32,20 @@
           </select>
 
           <label class="mt-4" for="scan">Scan kvalitet</label>
-          <select name="scan" id="scan">
+          <select class="rounded-lg" name="scan" id="scan">
             <option value="l">Large</option>
             <option value="xl">X-Large +29</option>
             <option value="xxl">XX-Large +99</option>
           </select>
 
           <label class="mt-4" for="specialfilm">Specialfilm</label>
-          <select name="specialfilm" id="specialfilm">
+          <select class="rounded-lg" name="specialfilm" id="specialfilm">
             <option value="alm_film">Almindelig film</option>
             <option value="dias_sh">Dias eller sort/hvid +49</option>
           </select>
 
           <label class="mt-4" for="antal">Antal</label>
-          <select name="antal" id="antal" class="w-1/5">
+          <select name="antal" id="antal" class="mb-10 w-1/5 rounded-lg">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -52,65 +57,70 @@
             <option value="9">9</option>
             <option value="10">10</option>
           </select>
-          <div class="relative mt-8">
-            <p class="absolute right-0 bottom-0">fra kr119</p>
-          </div>
 
-          <button class="p-4">Tilføj til kurv</button>
+          <div class="relative mt-8">
+            <p class="absolute bottom-16 right-0">fra kr119</p>
+          </div>
+          <div class="relative">
+            <button class="absolute bottom-0 right-0 rounded-md">
+              Tilføj til kurv
+            </button>
+          </div>
         </form>
       </div>
     </section>
 
-    <section>
-      <h2 class="font-bold">Yderligere information</h2>
-      <p>
-        Send din film/engangskamera med posten til vores fremkalderstudie, og vi
-        sørger for at fremkalde samt scanne den digitalt i flot opløsning! Når
-        vi har færdigbehandlet dine billeder, sender vi dem til dig direkte over
-        mail. Læs mere om denne vare og hvordan du gør under sektionen: "Send
-        din film"
-      </p>
-      <p>Filformat: JPG</p>
-      <p>
-        OBS.: Der korrigeres ikke for støv og ridser på scan af sort/hvid-film.
-      </p>
-    </section>
+    <section class="mx-10 mt-8 md:mx-40 md:grid md:grid-cols-2 md:gap-8">
+      <div>
+        <h2 class="font-bold md:mt-6">Yderligere information</h2>
+        <p>
+          Send din film/engangskamera med posten til vores fremkalderstudie, og
+          vi sørger for at fremkalde samt scanne den digitalt i flot opløsning!
+          Når vi har færdigbehandlet dine billeder, sender vi dem til dig
+          direkte over mail. Læs mere om denne vare og hvordan du gør under
+          sektionen: "Send din film"
+        </p>
+        <p>Filformat: JPG</p>
+        <p>
+          OBS.: Der korrigeres ikke for støv og ridser på scan af
+          sort/hvid-film.
+        </p>
 
-    <section>
-      <h2>Leveringstid</h2>
-      <p>
-        Almindelig C41 farvefilm: Op til 5 hverdage fra modtagelse (uden
-        modtagelsesdagen) Specialfilm: Op til 12 hverdage fra modtagelse (uden
-        modtagelsesdagen)
-      </p>
-    </section>
+        <h2 class="mt-6 font-bold">Leveringstid</h2>
+        <p>
+          Almindelig C41 farvefilm: Op til 5 hverdage fra modtagelse (uden
+          modtagelsesdagen) Specialfilm: Op til 12 hverdage fra modtagelse (uden
+          modtagelsesdagen)
+        </p>
+      </div>
 
-    <section>
-      <h2>Scan kvaliteter:</h2>
-      <ul>
-        <li>
-          <span
-            >Large: 2692 × 1830 - Scan i høj opløsning. Kan printes i A4
-            størrelse.
-          </span>
-        </li>
-        <li>
-          <span
-            >X-Large: 3637 × 2433 - Til enteusiasterne. Kan printes i A3
-            størrelse.
-          </span>
-        </li>
-        <li>
-          <span
-            >XX-Large: 3649 × 5362 - Til de professionelle. Kan printes i
-            plakatstørrelse.</span
-          >
-        </li>
-      </ul>
-      <p>
-        Printstørrelserne foroven er vejledende. Dette afhænger også af filmens
-        skarphed og omstændighederne, som billedet blev taget under.
-      </p>
+      <div>
+        <h2 class="mt-6 font-bold">Scan kvaliteter:</h2>
+        <ul>
+          <li>
+            <span
+              >Large: 2692 × 1830 - Scan i høj opløsning. Kan printes i A4
+              størrelse.
+            </span>
+          </li>
+          <li>
+            <span
+              >X-Large: 3637 × 2433 - Til enteusiasterne. Kan printes i A3
+              størrelse.
+            </span>
+          </li>
+          <li>
+            <span
+              >XX-Large: 3649 × 5362 - Til de professionelle. Kan printes i
+              plakatstørrelse.</span
+            >
+          </li>
+        </ul>
+        <p class="mt-4">
+          Printstørrelserne foroven er vejledende. Dette afhænger også af
+          filmens skarphed og omstændighederne, som billedet blev taget under.
+        </p>
+      </div>
     </section>
 
     <script type="module" src="./main.js"></script>
