--- a/src/singleview.html
+++ b/src/singleview.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Vite App</title>
   </head>
-  <body class="mx-8 grid">
+  <body class=" prose mx-8 grid">
     <section id="section1">
       <h1 class="text-center text-xl font-bold">FREMKALDELSE</h1>
       <div class="grid place-items-center">
