--- a/src/fremkaldelse.html
+++ b/src/fremkaldelse.html
@@ -11,6 +11,34 @@
 
 <body class="prose">
 
+    <header class="banner flex justify-between">
+        <img src="/img/logo.svg" alt="Logo" />
+        <div>
+          <button class="toggle-btn">☰</button>
+          <nav class="navbar">
+            <div class="dropdown">
+              <button class="dropbtn place-items-right">
+                <p class="">SHOP</p>
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="fremkaldelse.html">BESTIL FREMKALDELSE</a>
+                <a href="#0">KØB FILM & GAVEKORT</a>
+                <a href="#0">VIDEO OVERSPILNING</a>
+                <a href="smalfilm-overspillet.html">SMALFILM OVERSPILNING</a>
+                <a href="#0">SCAN AF LYSBILLEDER</a>
+                <a href="#0">SCAN AF PAPIRBILLEDER</a>
+              </div>
+            </div>
+            <a href="">ANALOG-GUIDE</a>
+            <a href="">SÅDAN GØR DU</a>
+            <a href="">OM OS</a>
+            <a href="">FAQ</a>
+            <a href=""><img src="/img/Bag.svg" alt="Kurv" /></a>
+          </nav>
+        </div>
+      </header>
+
 
 
 <section>
@@ -18,8 +46,11 @@
     <h3>Her bestiller du, hvordan dine film og engangskameraer skal fremkaldes.</h3>
     <button>MERE INFO</button>
 </section>
+<br>
+<br>
+<br>
 
-<section>
+<section class="grid grid-cols-2 gap-5">
     <button>FREMKALDELSE OG SCAN</button>
     <button>KUN FREMKALDELSE</button>
     <button>KUN SCAN</button>
@@ -176,6 +207,26 @@
         
 </section>
 
+<footer>
+    <h2>Kontakt</h2>
+    <e-mail>info@cph-lab.dk</e-mail>
+    <address>CPH-LAB/ Hørsholm foto
+        Hovedgaden 12,
+        2970, Hørsholm
+        </address>
+
+    <h2>Info</h2>
+<a href="">Handelsbetingelser</a>
+<a href="">Forsendelse og returnering</a>
+<a href="">Persondatapolitik</a>
+
+<p>Kan du ikke få nok af os? 
+    Tilmeld dig vores nyhedsbrev</p>
+    <div class="grid grid-cols-2">
+        <input type="text">
+        <button></button>
+    </div>
+</footer>
 
 <script type="module" src="./main.js"></script>
 
