--- a/src/index.html
+++ b/src/index.html
@@ -9,38 +9,9 @@
   </head>
   <body class="">
 
-<header class="flex justify-between ">
-  <img src="/img/logo.svg" alt="Logo">
-  <nav class="navbar">
-      <div class="dropdown">
-        <button class="dropbtn"> SHOP
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-            <a href="fremkaldelse.html">BESTIL FREMKALDELSE</a>
-            <a href="#0">KØB FILM & GAVEKORT</a>
-            <a href="#0">VIDEO OVERSPILNING</a>
-            <a href="smalfilm-overspillet.html">SMALFILM OVERSPILNING</a>
-            <a href="#0">SCAN AF LYSBILLEDER</a>
-            <a href="#0">SCAN AF PAPIRBILLEDER</a>
-        </div>
-      </div>
-      <a href="">ANALOG-GUIDE</a>
-      <a href="">SÅDAN GØR DU</a>
-      <a href="">OM OS</a>
-      <a href="">FAQ</a>
-      <a href=""><img src="/img/Bag.svg" alt="Kurv"></a>
-  </nav>
-</header>
+
+ 
 <main>
-  <section>
-    <h1 class="text-center">FÅ MERE UD AF DINE FILM- <br>
-      BILLEDER MED CPH-LAB
-    </h1>
-    <img class="w-screen md:hidden " src="/img/splashbillede-mobil.png" alt="Billedeprinter">
-    <img class="hidden  md:block " src="/img/splashbillede.png" alt="splashbillede"> <br>
-    <div class="grid grid-cols-3">
-      <button class= "ctaknap col-span-3 mt-6">BESTIL DIN FREMKALDELSE</button> <br>
 
     <header class="banner flex justify-between">
       <img src="/img/logo.svg" alt="Logo" />
@@ -69,7 +40,7 @@
         </nav>
       </div>
     </header>
-    <main>
+  </main>
       <section>
         <h1 class="text-center">
           FÅ MERE UD AF DINE FILM- <br />
@@ -86,8 +57,9 @@
           alt="splashbillede"
         />
         <div class="grid grid-cols-3">
-          <button class="col-span-3 mt-6">BESTIL DIN FREMKALDELSE</button>
-        </div>
+          <button class=" ctaknap col-span-3 mt-6">BESTIL DIN FREMKALDELSE</button> 
+        </div><br>
+
       </section>
       <section class="">
         <h2>VORES SERVICES</h2>
@@ -126,7 +98,6 @@
           fremkaldelse + Digitale billeder !
         </p>
       </section>
-    </main>
     <footer></footer>
     <script type="module" src="./main.js"></script>
   </body>
